[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.9.8"
thiserror = "1.0.30"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"

[features]
no-entrypoint = []
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "=1.9.8"
solana-sdk = "=1.9.8"
solana-validator = "=1.9.8"
solana-logger = "=1.9.8"

[lib]
crate-type = ["cdylib", "lib"]